# NUS-MEng-Assignments

./: README.md  test.py
HKUST_numerical_methods/: w1_lineplots.m  w1_quadratic.m
ee6104/part1/: CA1_params.asv  CA1_params.m  CA3_params.asv  CA3_params.m  entire_model.slxc  plant_adaptive.slxc  plant_model.slxc  plant_nonadaptive.slxc  reference_model.slxc
experiments/: sympy_tutorial.ipynb
me5401/: example_1.asv  homework1.py  lec7_dc_motor_control_example.m  lec7_example_11.m  lec7_notes_example_11.m  lect10_slides_ex1.slxc  mini_proj_1.asv  mini_proj_1.m  mini_proj_q1.m  mini_proj_q2.m  q1_full.m  q1_params.m  q1_simulink.slx  q1_simulink.slxc  q2_full.m  q2_simulink.slx  q2_simulink.slxc  q3_full.asv  q3_full.m  q3_simulink.slx  q3_simulink.slxc  q4_full.m  q4_simulink.slx  q4_simulink.slxc  q5_full.m  q5_simulink.slx  q5_simulink.slxc  untitled.m  untitled3.m
me5401/lec10/: lect10_slides_ex1.asv  lect10_slides_ex1.m  lect10_slides_ex1.slx  untitled.m
me5401/lec11/: lec11_slides_ex2.slx  lec11_slides_ex4.slx  lec11_slides_example_4.m
me5401/lec7/: lec7_example_11.asv  lec7_example_11.m  lec7_example_3.m  lec7_notes_example_11.m
me5401/lec8/: lec8_pitch_controller_aircraft.m  lec8_slides_example5.m
me5414/: README.md  a.out  emps.sh  fit1d.mps  fit1p.mps  fit1p.mpsc  lp_example.ipynb  mini_proj.ipynb  mini_proj.py  requirements.txt  results
me5414/clp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_and_run.sh  myapp  program.cpp
me5701/: homework1.py  homework1_q5.py  homework2.py  homework3.py  weights_calculation.ipynb
(+169 files in other folders)
